--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "swagger-ui-express": "^4.6.0"
   }
 }
